# oral-odonto-agenda

./: .editorconfig  .env.example  .env.production.example  .env.sqlite.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260326_01_initial_schema.py  20260327_02_add_patient_dni_column.py  20260327_03_add_availability_window_table.py
app/: __init__.py  main.py  web.py
app/api/: deps.py  router.py
app/api/routes/: appointments.py  auth.py  availability.py  notifications.py  patients.py  professionals.py
app/core/: config.py  enums.py  exceptions.py  logging.py  security.py
app/db/: base.py  models.py  session.py
app/integrations/: email.py  whatsapp.py
app/models/: appointment.py  audit_log.py  availability_window.py  holiday_block.py  mixins.py  notification.py  patient.py  professional.py  user.py  working_hours.py
app/schemas/: appointment.py  auth.py  availability.py  notification.py  patient.py  professional.py
app/services/: __init__.py  ai_agent.py  auth_service.py  followup_agent.py  professional_service.py  reception_agent.py  schedule_agent.py
app/static/: styles.css
app/tasks/: production_check.py  seed_demo.py  send_reminders.py
app/templates/: admin_appointment_edit.html  admin_appointments.html  admin_dashboard.html  admin_notifications.html  admin_patient_edit.html  admin_patients.html  admin_professional_edit.html  admin_professionals.html  admin_settings.html  base_admin.html  dashboard.html  login.html  public_booking.html
app/utils/: audit.py  datetime.py
docs/: ARCHITECTURE.md  BACKUPS.md  DEPLOYMENT.md  OPERATIONS.md  PROD_ENV_CHECKLIST.md
odonto_agenda_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ops/: pg_backup.sh
tests/: conftest.py  test_appointments.py  test_auth.py  test_patients.py
